@@ -1,9 +1,26 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
 package com.azure.ai.projects.usage.agent;
 
 import com.azure.ai.projects.AIProjectClientBuilder;
 import com.azure.ai.projects.AgentsClient;
 import com.azure.ai.projects.implementation.models.CreateAgentRequest;
-import com.azure.ai.projects.models.*;
+import com.azure.ai.projects.models.Agent;
+import com.azure.ai.projects.models.AgentThread;
+import com.azure.ai.projects.models.AzureFunctionBinding;
+import com.azure.ai.projects.models.AzureFunctionDefinition;
+import com.azure.ai.projects.models.AzureFunctionStorageQueue;
+import com.azure.ai.projects.models.AzureFunctionToolDefinition;
+import com.azure.ai.projects.models.CreateRunOptions;
+import com.azure.ai.projects.models.FunctionDefinition;
+import com.azure.ai.projects.models.MessageContent;
+import com.azure.ai.projects.models.MessageImageFileContent;
+import com.azure.ai.projects.models.MessageRole;
+import com.azure.ai.projects.models.MessageTextContent;
+import com.azure.ai.projects.models.OpenAIPageableListOfThreadMessage;
+import com.azure.ai.projects.models.RunStatus;
+import com.azure.ai.projects.models.ThreadMessage;
+import com.azure.ai.projects.models.ThreadRun;
 import com.azure.core.http.HttpHeaderName;
 import com.azure.core.http.rest.RequestOptions;
 import com.azure.core.util.BinaryData;
@@ -11,7 +28,8 @@ import com.azure.core.util.Configuration;
 import com.azure.identity.DefaultAzureCredentialBuilder;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.Map;
 
 public class SampleAgentAzureFunction {
@@ -26,50 +44,51 @@ public class SampleAgentAzureFunction {
             .credential(new DefaultAzureCredentialBuilder().build())
             .buildAgentsClient();
 
-        var storageQueueUri = Configuration.getGlobalConfiguration().get("STORAGE_QUEUE_URI", "");
+        String storageQueueUri = Configuration.getGlobalConfiguration().get("STORAGE_QUEUE_URI", "");
+        String azureFunctionName = Configuration.getGlobalConfiguration().get("AZURE_FUNCTION_NAME", "");
 
         FunctionDefinition fnDef = new FunctionDefinition(
-            "jayantagentazfn",
+            azureFunctionName,
             BinaryData.fromObject(
-                Map.of(
+                mapOf(
                     "type", "object",
-                    "properties", Map.of(
+                    "properties", mapOf(
                         "location",
-                        Map.of("type", "string", "description", "The location to look up")
+                        mapOf("type", "string", "description", "The location to look up")
                     ),
-                    "required", new String[] {"location"}
+                    "required", new String[]{"location"}
                 )
             )
         );
         AzureFunctionDefinition azureFnDef = new AzureFunctionDefinition(
             fnDef,
-            new AzureFunctionBinding(new AzureFunctionStorageQueue(storageQueueUri,"agent-input")),
-            new AzureFunctionBinding(new AzureFunctionStorageQueue(storageQueueUri,"agent-output"))
+            new AzureFunctionBinding(new AzureFunctionStorageQueue(storageQueueUri, "agent-input")),
+            new AzureFunctionBinding(new AzureFunctionStorageQueue(storageQueueUri, "agent-output"))
         );
         AzureFunctionToolDefinition azureFnTool = new AzureFunctionToolDefinition(azureFnDef);
 
-        var agentName = "azure_function_example";
+        String agentName = "azure_function_example";
         RequestOptions requestOptions = new RequestOptions()
             .setHeader(HttpHeaderName.fromString("x-ms-enable-preview"), "true");
         CreateAgentRequest createAgentRequestObj = new CreateAgentRequest("gpt-4o-mini")
             .setName(agentName)
             .setInstructions("You are a helpful agent. Use the provided function any time "
                 + "you are asked with the weather of any location")
-            .setTools(List.of(azureFnTool));
+            .setTools(Arrays.asList(azureFnTool));
         BinaryData createAgentRequest = BinaryData.fromObject(createAgentRequestObj);
         Agent agent = agentsClient.createAgentWithResponse(createAgentRequest, requestOptions)
             .getValue().toObject(Agent.class);
 
-        var thread = agentsClient.createThread();
-        var createdMessage = agentsClient.createMessage(
+        AgentThread thread = agentsClient.createThread();
+        ThreadMessage createdMessage = agentsClient.createMessage(
             thread.getId(),
             MessageRole.USER,
             "What is the weather in Seattle, WA?");
 
         //run agent
-        var createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
+        CreateRunOptions createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
             .setAdditionalInstructions("");
-        var threadRun = agentsClient.createRun(createRunOptions);
+        ThreadRun threadRun = agentsClient.createRun(createRunOptions);
 
         try {
             do {
@@ -85,18 +104,13 @@ public class SampleAgentAzureFunction {
                 System.out.println(threadRun.getLastError().getMessage());
             }
 
-            var runMessages = agentsClient.listMessages(thread.getId());
-            for (ThreadMessage message : runMessages.getData())
-            {
+            OpenAIPageableListOfThreadMessage runMessages = agentsClient.listMessages(thread.getId());
+            for (ThreadMessage message : runMessages.getData()) {
                 System.out.print(String.format("%1$s - %2$s : ", message.getCreatedAt(), message.getRole()));
-                for (MessageContent contentItem : message.getContent())
-                {
-                    if (contentItem instanceof MessageTextContent)
-                    {
+                for (MessageContent contentItem : message.getContent()) {
+                    if (contentItem instanceof MessageTextContent) {
                         System.out.print((((MessageTextContent) contentItem).getText().getValue()));
-                    }
-                    else if (contentItem instanceof MessageImageFileContent)
-                    {
+                    } else if (contentItem instanceof MessageImageFileContent) {
                         String imageFileId = (((MessageImageFileContent) contentItem).getImageFile().getFileId());
                         System.out.print("Image from ID: " + imageFileId);
                     }
@@ -105,11 +119,22 @@ public class SampleAgentAzureFunction {
             }
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
-        }
-        finally {
+        } finally {
             //cleanup
             agentsClient.deleteThread(thread.getId());
             agentsClient.deleteAgent(agent.getId());
         }
+    }
+
+    // Use "Map.of" if available
+    @SuppressWarnings("unchecked")
+    private static <T> Map<String, T> mapOf(Object... inputs) {
+        Map<String, T> map = new HashMap<>();
+        for (int i = 0; i < inputs.length; i += 2) {
+            String key = (String) inputs[i];
+            T value = (T) inputs[i + 1];
+            map.put(key, value);
+        }
+        return map;
     }
 }
