@@ -1,8 +1,26 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
 package com.azure.ai.projects.usage.agent;
 
 import com.azure.ai.projects.AIProjectClientBuilder;
 import com.azure.ai.projects.AgentsClient;
-import com.azure.ai.projects.models.*;
+import com.azure.ai.projects.models.Agent;
+import com.azure.ai.projects.models.AgentStreamEvent;
+import com.azure.ai.projects.models.AgentThread;
+import com.azure.ai.projects.models.CreateAgentOptions;
+import com.azure.ai.projects.models.CreateRunOptions;
+import com.azure.ai.projects.models.FunctionDefinition;
+import com.azure.ai.projects.models.FunctionToolDefinition;
+import com.azure.ai.projects.models.MessageDeltaImageFileContent;
+import com.azure.ai.projects.models.MessageDeltaTextContent;
+import com.azure.ai.projects.models.MessageRole;
+import com.azure.ai.projects.models.RequiredFunctionToolCall;
+import com.azure.ai.projects.models.RequiredToolCall;
+import com.azure.ai.projects.models.RunStatus;
+import com.azure.ai.projects.models.SubmitToolOutputsAction;
+import com.azure.ai.projects.models.ThreadMessage;
+import com.azure.ai.projects.models.ThreadRun;
+import com.azure.ai.projects.models.ToolOutput;
 import com.azure.ai.projects.models.streaming.StreamMessageUpdate;
 import com.azure.ai.projects.models.streaming.StreamRequiredAction;
 import com.azure.ai.projects.models.streaming.StreamThreadRunCreation;
@@ -17,6 +35,8 @@ import org.junit.jupiter.api.Test;
 import reactor.core.publisher.Flux;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
@@ -37,7 +57,7 @@ public class SampleAgentFunctionsStreaming {
             .buildAgentsClient();
 
         // function tool definitions
-        var getUserFavoriteCityTool = new FunctionToolDefinition(
+        FunctionToolDefinition getUserFavoriteCityTool = new FunctionToolDefinition(
             new FunctionDefinition(
                 "getUserFavoriteCity",
                 BinaryData.fromObject(
@@ -45,36 +65,36 @@ public class SampleAgentFunctionsStreaming {
                 )).setDescription("Gets the user's favorite city.")
         );
 
-        var getCityNicknameTool = new FunctionToolDefinition(
+        FunctionToolDefinition getCityNicknameTool = new FunctionToolDefinition(
             new FunctionDefinition(
                 "getCityNickname",
                 BinaryData.fromObject(
-                    Map.of(
+                    mapOf(
                         "type", "object",
-                        "properties", Map.of(
-                            "location", Map.of(
+                        "properties", mapOf(
+                            "location", mapOf(
                                 "type", "string",
                                 "description", "The city and state, e.g. San Francisco, CA")
                         ),
-                        "required", new String[] {"location"}))
+                        "required", new String[]{"location"}))
             ).setDescription("Gets the nickname of a city, e.g. 'LA' for 'Los Angeles, CA'.")
         );
 
-        var getCurrentWeatherAtLocationTool = new FunctionToolDefinition(
+        FunctionToolDefinition getCurrentWeatherAtLocationTool = new FunctionToolDefinition(
             new FunctionDefinition(
                 "getCurrentWeatherAtLocation",
                 BinaryData.fromObject(
-                    Map.of(
+                    mapOf(
                         "type", "object",
-                        "properties", Map.of(
-                            "location", Map.of(
+                        "properties", mapOf(
+                            "location", mapOf(
                                 "type", "string",
                                 "description", "The city and state, e.g. San Francisco, CA"),
-                            "unit", Map.of(
+                            "unit", mapOf(
                                 "type", "string",
                                 "description", "temperature unit as c or f",
-                                "enum", new String[] {"c", "f"})),
-                        "required", new String[] {"location", "unit"}))
+                                "enum", new String[]{"c", "f"})),
+                        "required", new String[]{"location", "unit"}))
             ).setDescription("Gets the current weather at a provided location.")
         );
 
@@ -103,12 +123,12 @@ public class SampleAgentFunctionsStreaming {
         Function<RequiredToolCall, ToolOutput> getResolvedToolOutput = toolCall -> {
             if (toolCall instanceof RequiredFunctionToolCall) {
                 try {
-                    var functionToolCall = (RequiredFunctionToolCall) toolCall;
+                    RequiredFunctionToolCall functionToolCall = (RequiredFunctionToolCall) toolCall;
                     String functionName = functionToolCall.getFunction().getName();
-                    if (functionName.equals("getUserFavoriteCity"))
+                    if (functionName.equals("getUserFavoriteCity")) {
                         return new ToolOutput().setToolCallId(functionToolCall.getId())
                             .setOutput(getUserFavoriteCity.get());
-                    else if (functionName.equals("getCityNickname")) {
+                    } else if (functionName.equals("getCityNickname")) {
                         String args = functionToolCall.getFunction().getArguments();
 
                         JsonNode root = new JsonMapper().readTree(args);
@@ -124,7 +144,6 @@ public class SampleAgentFunctionsStreaming {
                         String unit = String.valueOf(root.get("unit").asText());
                         return new ToolOutput().setToolCallId(functionToolCall.getId())
                             .setOutput(getCurrentWeatherAtLocation.apply(location, unit));
-
                     }
                 } catch (JsonProcessingException e) {
                     throw new RuntimeException(e);
@@ -133,23 +152,23 @@ public class SampleAgentFunctionsStreaming {
             return null;
         };
 
-        var agentName = "functions_streaming_example";
-        var createAgentOptions = new CreateAgentOptions("gpt-4o-mini")
+        String agentName = "functions_streaming_example";
+        CreateAgentOptions createAgentOptions = new CreateAgentOptions("gpt-4o-mini")
             .setName(agentName)
             .setInstructions("You are a weather bot. Use the provided functions to help answer questions. "
                 + "Customize your responses to the user's preferences as much as possible and use friendly "
                 + "nicknames for cities whenever possible.")
-            .setTools(List.of(getUserFavoriteCityTool, getCityNicknameTool, getCurrentWeatherAtLocationTool));
+            .setTools(Arrays.asList(getUserFavoriteCityTool, getCityNicknameTool, getCurrentWeatherAtLocationTool));
         Agent agent = agentsClient.createAgent(createAgentOptions);
 
-        var thread = agentsClient.createThread();
-        var createdMessage = agentsClient.createMessage(
+        AgentThread thread = agentsClient.createThread();
+        ThreadMessage createdMessage = agentsClient.createMessage(
             thread.getId(),
             MessageRole.USER,
             "What's the weather like in my favorite city?");
 
         //run agent
-        var createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
+        CreateRunOptions createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
             .setAdditionalInstructions("");
 
         try {
@@ -160,15 +179,14 @@ public class SampleAgentFunctionsStreaming {
                 streamUpdate -> {
                     if (streamUpdate.getKind() == AgentStreamEvent.THREAD_RUN_CREATED) {
                         System.out.println("----- Run started! -----");
-                    }
-                    else if (streamUpdate instanceof StreamRequiredAction) {
+                    } else if (streamUpdate instanceof StreamRequiredAction) {
                         StreamRequiredAction actionUpdate = (StreamRequiredAction) streamUpdate;
                         AtomicReference<ThreadRun> streamRun = new AtomicReference<>(actionUpdate.getMessage());
 
                         while (streamRun.get().getStatus() == RunStatus.REQUIRES_ACTION) {
                             List<ToolOutput> toolOutputs = new ArrayList<>();
 
-                            var submitToolsOutputAction = (SubmitToolOutputsAction)(streamRun.get().getRequiredAction());
+                            SubmitToolOutputsAction submitToolsOutputAction = (SubmitToolOutputsAction) (streamRun.get().getRequiredAction());
                             for (RequiredToolCall toolCall : submitToolsOutputAction.getSubmitToolOutputs().getToolCalls()) {
                                 toolOutputs.add(getResolvedToolOutput.apply(toolCall));
                             }
@@ -180,18 +198,15 @@ public class SampleAgentFunctionsStreaming {
                             ).doOnNext(update -> {
                                 if (update instanceof StreamRequiredAction) {
                                     streamRun.set(((StreamRequiredAction) update).getMessage());
-                                }
-                                else if (update instanceof StreamMessageUpdate) {
+                                } else if (update instanceof StreamMessageUpdate) {
                                     StreamMessageUpdate messageUpdate = (StreamMessageUpdate) update;
                                     printStreamUpdate(messageUpdate);
-                                }
-                                else if (update.getKind() == AgentStreamEvent.THREAD_RUN_COMPLETED) {
+                                } else if (update.getKind() == AgentStreamEvent.THREAD_RUN_COMPLETED) {
                                     streamRun.set(((StreamThreadRunCreation) update).getMessage());
                                 }
                             }).blockLast();
                         }
-                    }
-                    else if (streamUpdate instanceof StreamMessageUpdate) {
+                    } else if (streamUpdate instanceof StreamMessageUpdate) {
                         StreamMessageUpdate messageUpdate = (StreamMessageUpdate) streamUpdate;
                         printStreamUpdate(messageUpdate);
                     }
@@ -199,11 +214,9 @@ public class SampleAgentFunctionsStreaming {
             ).blockLast();
 
             System.out.println();
-        }
-        catch (Exception ex) {
+        } catch (Exception ex) {
             throw ex;
-        }
-        finally {
+        } finally {
             //cleanup
             agentsClient.deleteThread(thread.getId());
             agentsClient.deleteAgent(agent.getId());
@@ -215,11 +228,22 @@ public class SampleAgentFunctionsStreaming {
             if (delta instanceof MessageDeltaImageFileContent) {
                 MessageDeltaImageFileContent imgContent = (MessageDeltaImageFileContent) delta;
                 System.out.println("Image fileId: " + imgContent.getImageFile().getFileId());
-            }
-            else if (delta instanceof MessageDeltaTextContent) {
+            } else if (delta instanceof MessageDeltaTextContent) {
                 MessageDeltaTextContent textContent = (MessageDeltaTextContent) delta;
                 System.out.print(textContent.getText().getValue());
             }
         });
+    }
+
+    // Use "Map.of" if available
+    @SuppressWarnings("unchecked")
+    private static <T> Map<String, T> mapOf(Object... inputs) {
+        Map<String, T> map = new HashMap<>();
+        for (int i = 0; i < inputs.length; i += 2) {
+            String key = (String) inputs[i];
+            T value = (T) inputs[i + 1];
+            map.put(key, value);
+        }
+        return map;
     }
 }
