@@ -1,22 +1,27 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
 package com.azure.ai.projects.usage.agent;
 
 import com.azure.ai.projects.AIProjectClientBuilder;
 import com.azure.ai.projects.AgentsClient;
-import com.azure.ai.projects.implementation.models.CreateRunRequest;
-import com.azure.ai.projects.models.*;
+import com.azure.ai.projects.models.Agent;
+import com.azure.ai.projects.models.AgentStreamEvent;
+import com.azure.ai.projects.models.AgentThread;
+import com.azure.ai.projects.models.CodeInterpreterToolDefinition;
+import com.azure.ai.projects.models.CreateAgentOptions;
+import com.azure.ai.projects.models.CreateRunOptions;
+import com.azure.ai.projects.models.MessageDeltaImageFileContent;
+import com.azure.ai.projects.models.MessageDeltaTextContent;
+import com.azure.ai.projects.models.MessageRole;
+import com.azure.ai.projects.models.ThreadMessage;
 import com.azure.ai.projects.models.streaming.StreamMessageUpdate;
 import com.azure.ai.projects.models.streaming.StreamUpdate;
-import com.azure.core.http.rest.RequestOptions;
-import com.azure.core.http.rest.Response;
-import com.azure.core.util.BinaryData;
 import com.azure.core.util.Configuration;
 import com.azure.identity.DefaultAzureCredentialBuilder;
 import org.junit.jupiter.api.Test;
 import reactor.core.publisher.Flux;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Arrays;
 
 public class SampleAgentStreaming {
 
@@ -30,20 +35,20 @@ public class SampleAgentStreaming {
             .credential(new DefaultAzureCredentialBuilder().build())
             .buildAgentsClient();
 
-        var agentName = "agent_streaming_example";
-        var createAgentOptions = new CreateAgentOptions("gpt-4o-mini")
+        String agentName = "agent_streaming_example";
+        CreateAgentOptions createAgentOptions = new CreateAgentOptions("gpt-4o-mini")
             .setName(agentName)
             .setInstructions("You politely help with math questions. Use the code interpreter tool when asked to visualize numbers.")
-            .setTools(List.of(new CodeInterpreterToolDefinition()));
+            .setTools(Arrays.asList(new CodeInterpreterToolDefinition()));
         Agent agent = agentsClient.createAgent(createAgentOptions);
 
-        var thread = agentsClient.createThread();
-        var createdMessage = agentsClient.createMessage(
+        AgentThread thread = agentsClient.createThread();
+        ThreadMessage createdMessage = agentsClient.createMessage(
             thread.getId(),
             MessageRole.USER,
             "Hi, Assistant! Draw a graph for a line with a slope of 4 and y-intercept of 9.");
 
-        var createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
+        CreateRunOptions createRunOptions = new CreateRunOptions(thread.getId(), agent.getId())
             .setAdditionalInstructions("");
 
         try {
@@ -53,15 +58,13 @@ public class SampleAgentStreaming {
                 streamUpdate -> {
                     if (streamUpdate.getKind() == AgentStreamEvent.THREAD_RUN_CREATED) {
                         System.out.println("----- Run started! -----");
-                    }
-                    else if (streamUpdate instanceof StreamMessageUpdate) {
+                    } else if (streamUpdate instanceof StreamMessageUpdate) {
                         StreamMessageUpdate messageUpdate = (StreamMessageUpdate) streamUpdate;
                         messageUpdate.getMessage().getDelta().getContent().stream().forEach(delta -> {
                             if (delta instanceof MessageDeltaImageFileContent) {
                                 MessageDeltaImageFileContent imgContent = (MessageDeltaImageFileContent) delta;
                                 System.out.println("Image fileId: " + imgContent.getImageFile().getFileId());
-                            }
-                            else if (delta instanceof MessageDeltaTextContent) {
+                            } else if (delta instanceof MessageDeltaTextContent) {
                                 MessageDeltaTextContent textContent = (MessageDeltaTextContent) delta;
                                 System.out.print(textContent.getText().getValue());
                             }
@@ -71,11 +74,9 @@ public class SampleAgentStreaming {
             ).blockLast();
 
             System.out.println();
-        }
-        catch (Exception ex) {
+        } catch (Exception ex) {
             throw ex;
-        }
-        finally {
+        } finally {
             //cleanup
             agentsClient.deleteThread(thread.getId());
             agentsClient.deleteAgent(agent.getId());
